--- a/css/styles.css
+++ b/css/styles.css
@@ -20,15 +20,19 @@ a {
 @-webkit-viewport {
   width: device-width;
 }
+
 @-moz-viewport {
   width: device-width;
 }
+
 @-ms-viewport {
   width: device-width;
 }
+
 @-o-viewport {
   width: device-width;
 }
+
 @viewport {
   width: device-width;
 }
@@ -85,9 +89,11 @@ a {
   .js .nav-collapse {
     position: relative;
   }
+
   .js .nav-collapse.closed {
     max-height: none;
   }
+
   .nav-toggle {
     display: none;
   }
@@ -301,12 +307,15 @@ header {
 }
 
 .nav-toggle:before {
-  color: #fafafa; /* Edit this to change the icon color */
-  font: normal 28px/55px "responsivenav"; /* Edit font-size (28px) to change the icon size */
+  color: #fafafa;
+  /* Edit this to change the icon color */
+  font: normal 28px/55px "responsivenav";
+  /* Edit font-size (28px) to change the icon size */
   text-transform: none;
   text-align: center;
   position: absolute;
-  content: "\2261"; /* Hamburger icon */
+  content: "\2261";
+  /* Hamburger icon */
   text-indent: 0;
   speak: none;
   width: 100%;
@@ -316,7 +325,8 @@ header {
 
 .nav-toggle.active:before {
   font-size: 24px;
-  content: "\78"; /* Close icon */
+  content: "\78";
+  /* Close icon */
 }
 
 #home {
@@ -395,6 +405,7 @@ textarea {
   margin-top: 20px;
   font-weight: 500;
 }
+
 .row button:hover {
   background-color: #198069;
   color: #121f2f;
@@ -402,8 +413,8 @@ textarea {
 
 img {
   margin-left: 20px;
-  max-width: 50px;
-  padding: 0 20px;
+  max-width: 80px;
+
   float: left;
   size: contain;
 }
