--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,12 +4,13 @@
 
 .container--dashboard-data {
     margin-top: calc(16px + 64px);
-    background-color: #45CAAD;
+    background-color: #ffffff;
     box-shadow: 0px 2px 7px -5px rgba(0, 0, 0, .6);
     font-size: 16px;
     font-weight: 500;
     min-height: 400px;
     color: rgb(17, 85, 70);
+    border-radius: 50px;
 }
 
 .box--user-photo {
@@ -34,7 +35,7 @@
 }
 
 .container--dashboard-data strong {
-    color: #fafafa;
+    color: #121F2F;
 }
 
 .box--user-informations-line {
